terraform/modules/database_subnet/main.tf
# Database Subnet
resource "aws_subnet" "cyber94_vulnerability_scanner_subnet_db_tf"{
  vpc_id = var.var_aws_vpc_id
  cidr_block = "10.118.3.0/24"

  tags = {
    Name = "cyber94_vulnerability_scanner_db"
  }
}

# Database Network Access Control List
resource "aws_network_acl" "cyber94_vulnerability_scanner_ncal_db_tf"{
  vpc_id = var.var_aws_vpc_id

  egress {
       protocol   = "tcp"
       rule_no    = 1000
       action     = "allow"
       cidr_block = "0.0.0.0/0"
       from_port  = 1024
       to_port    = 65535
     }

  ingress {
       protocol   = "tcp"
       rule_no    = 2000
       action     = "allow"
       cidr_block = "10.118.1.0/24"
       from_port  = 3306
       to_port    = 3306
     }

   # ingress {
   #     protocol   = "tcp"
   #     rule_no    = 100
   #     action     = "allow"
   #     cidr_block = "0.0.0.0/0"
   #     from_port  = 22
   #     to_port    = 22
   #   }

   ingress {
       protocol   = "tcp"
       rule_no    = 100
       action     = "allow"
       cidr_block = "10.118.2.0/24"
       from_port  = 22
       to_port    = 22
     }

   ingress {
       protocol   = "tcp"
       rule_no    = 200
       action     = "allow"
       cidr_block = "0.0.0.0/0"
       from_port  = 3306
       to_port    = 3306
     }

  subnet_ids = [aws_subnet.cyber94_vulnerability_scanner_subnet_db_tf.id]

  tags = {
    Name = "cyber94_vulnerability_scanner_ncal_db"
  }
}
